[package]
name = "validator-mgnt"
version = "0.1.0"
authors = ["Edgar Aroutiounian <edgar.factorial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "3.0.0-beta.1"
tui = "0.9.5"
termion = "1.5"
