[package]
name = "validator-mgnt"
version = "0.1.0"
authors = ["Edgar Aroutiounian <edgar.factorial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.112", features = ["derive"] }
serde_yaml = "0.8.13"
clap = "3.0.0-beta.1"
futures = "0.3.5"
# Hyper is an asynchronous HTTP library. We'll use it to power our HTTP
# server and to make HTTP requests.
hyper = "0.13.6"
# (only for testing)
anyhow = "1.0.31"
reqwest = { version = "0.10.6", features = ["blocking"] }
async-std = "1.6.1"
