[package]
name = "validator-mgnt"
version = "0.0.1"
authors = ["Edgar Aroutiounian <edgar.factorial@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.112", features = ["derive"] }
serde_yaml = "0.8.13"
clap = "3.0.0-beta.1"
hyper = "0.13.6"
futures = "0.3.5"

[dependencies.async-std]
version = "1.6.2"
features = ["unstable"]
